github action test

--- a/备忘.md
+++ b/备忘.md
@@ -43,3 +43,7 @@ exit
 "https://docker.1ms.run",
 "https://docker.1panel.live/"
 ]
+
+github actions的秘钥格式要求（用cat ~/.ssh/id_rsa在本地取，确保对应公钥已上传到服务器）：
+顶部一行必须是 -----BEGIN OPENSSH PRIVATE KEY-----
+底部一行必须是 -----END OPENSSH PRIVATE KEY-----
