github action test

--- a/备忘.md
+++ b/备忘.md
@@ -44,6 +44,6 @@ exit
 "https://docker.1panel.live/"
 ]
 
-github actions的秘钥格式要求（用cat ~/.ssh/id_rsa在本地取，确保对应公钥已上传到服务器）：
+github actions的秘钥格式要求（用cat ~/.ssh/id_rsa在本地取，确保对应公钥已上传到服务器，用ssh -i ~/.ssh/id_rsa root@8.155.47.138 -p 22验证，不用输入密码就对了）：
 顶部一行必须是 -----BEGIN OPENSSH PRIVATE KEY-----
 底部一行必须是 -----END OPENSSH PRIVATE KEY-----
